[package]
name = "iter-set-ops"
version = "0.2.1"
authors = ["Igor Martayan <imartayan@users.noreply.github.com>"]
description = "Fast set operations on an arbitrary number of sorted deduplicated iterators"
readme = "README.md"
exclude = [".github/**", ".gitignore"]
repository = "https://github.com/imartayan/iter-set-ops"
homepage = "https://crates.io/crates/iter-set-ops"
documentation = "https://docs.rs/iter-set-ops"
license = "MIT"
keywords = ["set", "operators", "iterator", "sort", "dedup"]
edition = "2021"

[dependencies]
binary-heap-plus = "0.5"
compare = "0.1"

[dev-dependencies]
rand = "0.8"
